<resources>
    <string name="app_name">线路运维</string>
    <string name="collect">采集</string>
    <string name="search">查询</string>
    <string name="reLocate">重定位</string>
    <string name="refresh">刷新</string>
    <string name="noPic">当前无图片</string>
    <string name="locate">当前位置</string>
    <string name="scan">扫一扫</string>
    <string name="clear">清除数据</string>
    <string name="update">检查新版本</string>
    <string name="exit">退出当前账号</string>
    <string name="title">请选择</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">功能开发中，敬请期待！</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">请输入账户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">账号不能为空</string>
    <string name="error_invalid_password">密码不能为空</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">账号不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="check_name"> 提      交      人</string>
    <string name="check_time">检修时间</string>
    <string name="check_state">检修状态</string>
    <string name="check_maintenance">维修人员</string>
    <string name="check_remark">检修备注</string>
    <string name="check_picture">现场图片</string>
    <string name="check_add">添加维修记录</string>
    <string name="check_lat">经          度</string>
    <string name="check_long">纬          度</string>

    <string name="maintenance_line_info">所属线缆</string>
    <string name="title_activity_navi_main">NaviMain</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">任务</string>
    <string name="title_notifications">消息</string>
    <string name="title_person">个人</string>
    <string name="search_hint">Search</string>
</resources>
