<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".TaskEditActivity">

    <FrameLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/edit_toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:titleTextColor="@color/textColorPrimary"
            app:popupTheme="@style/OverFlowMenuTheme"
            app:title="编辑任务"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:background="@color/colorPrimary"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">

        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:indeterminateBehavior="repeat"
            android:indeterminateDrawable="@drawable/loading" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:text="加载中..." />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/check_maintenance"
            style="@style/DetailTitle" />

        <Spinner
            android:id="@+id/spinner_worker_list"
            android:layout_marginLeft="5dp"
            android:background="@mipmap/spinner2"
            android:spinnerMode="dialog"
            android:prompt="@string/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"  />
    </LinearLayout>
        <View
            style="@style/DetailLine"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_take_pic"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@mipmap/icon8"/>
        <Button
            android:id="@+id/dialog_pick_pic"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:background="@mipmap/icon9"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layerType="software"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/dialog_empty_text"
            android:text="@string/noPic"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <android.support.v4.view.ViewPager
            android:id="@+id/dialog_viewPager"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:clipChildren="false"/>
    </LinearLayout>
        <View
            style="@style/DetailLine"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/check_remark"
            style="@style/DetailTitle" />
        <EditText
            android:id="@+id/dialog_remark"
            style="@style/DetailContent"/>
    </LinearLayout>
        <View
            style="@style/DetailLine"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dialog_add_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:text="一般维修"/>

        <Button
            android:id="@+id/dialog_add_serious"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:background="@color/button"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_marginLeft="1dp"
            android:layout_height="wrap_content"
            android:text="紧急维修"/>
    </LinearLayout>
</LinearLayout>