<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".LineStateHistoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                android:id="@+id/id_toolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:titleTextColor="@color/textColorPrimary"
                app:popupTheme="@style/OverFlowMenuTheme"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:background="@color/colorPrimary"/>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:orientation="vertical">

        <LinearLayout
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:indeterminateBehavior="repeat"
                android:indeterminateDrawable="@drawable/loading" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:text="加载中..." />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="提  交  人"
                style="@style/DetailTitle" />
            <TextView
                android:id="@+id/et_name"
                style="@style/DetailContent"/>
        </LinearLayout>
            <View
                style="@style/DetailLine"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/check_time"
                style="@style/DetailTitle" />
            <TextView
                android:id="@+id/et_time"
                style="@style/DetailContent" />
        </LinearLayout>
            <View
                style="@style/DetailLine"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="经        度"
                style="@style/DetailTitle" />
            <TextView
                android:id="@+id/check_lat"
                style="@style/DetailContent" />
        </LinearLayout>

            <View
                style="@style/DetailLine"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content">
                <TextView
                    android:text="纬        度"
                    style="@style/DetailTitle" />
                <TextView
                    android:id="@+id/check_long"
                    style="@style/DetailContent" />
            </LinearLayout>
            <View
                style="@style/DetailLine"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/check_state"
                style="@style/DetailTitle" />
            <TextView
                android:id="@+id/sp_state"
                style="@style/DetailContent"/>
        </LinearLayout>
            <View
                style="@style/DetailLine"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layerType="software"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/check_empty_text"
                android:text="@string/noPic"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <android.support.v4.view.ViewPager
                android:id="@+id/check_viewPager"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:clipChildren="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/check_remark"
                style="@style/DetailTitle" />
            <TextView
                android:id="@+id/et_remark"
                style="@style/DetailContent"/>
        </LinearLayout>
        <View
            style="@style/DetailLine"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_history"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <View
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:background="@color/button"/>

            <TextView

                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textColor="@color/button"
                android:layout_marginLeft="18dp"
                android:textSize="14sp"
                android:text="历史记录"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_list"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"/>
    </LinearLayout>
</ScrollView>